<resources>
    <string name="app_name">Yuda</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_1">Home</string>
    <string name="menu_2">Profile</string>
    <string name="menu_3">Chat</string>
    <string name="menu_4">Sales &amp; Benefits</string>
    <string name="menu_5">Public transport</string>
    <string name="menu_6">Move to day market</string>
    <string name="menu_7">Business Proprietors</string>
    <string name="menu_8">About</string>
    <string name="menu_9">Contact Us</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GET STARTED</string>

    <string name="slide_1_title">Marketplace</string>
    <string name="slide_1_desc">Find stores in the market</string>

    <string name="slide_2_title">Parking</string>
    <string name="slide_2_desc">Find parking near the market</string>

    <string name="slide_3_title">Personal Profile</string>
    <string name="slide_3_desc">Add photos and chat with other people</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="public_trans">Light rail, buses: 1, 18, 32, 66, 74, 75, 78, 78א</string>
    <string name="parking">Klal center, Yaffa str., Beit Hayal in Ben tsvi str., Shukenyon in Agripas str.</string>
    <string name="version">Version: 1.0</string>
    <string name="about">Created and designed by: Michal Ben Hamo, Rachel Borochov.\n\nIf you have any questions,
        or if you have noticed some problems, please contact us: yudapplication@gmail.com</string>
    <string name="business_owner">If you wish do add your business page to the application, or you wish to add some
    changes to an existing page, please contact us: yudapplication@gmail.com</string>
    <string name="categories">You can search by categories.\nSimply enter one of the options:\n\n
        <li>Bar</li>\n
        <li>Restaurant</li>\n
        <li>Food stall</li>\n
        <li>Chill out</li>\n
        <li>Loud music</li>\n
        <li>Food stall</li></string>
    <string name="categories_title">You can search by categories.\nSimply enter one of the options:</string>
</resources>
